--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,18 @@
 language: node_js
 node_js:
-- 12
+  - 12
 cache:
   directories:
   - node_modules
 script:
-- yarn --frozen-lockfile
-- yarn lint
-- yarn build
+  - yarn --frozen-lockfile
+  - yarn lint
+  - yarn build
+before_deploy:
+  - pyenv global 3.7.1
+  - pip install -U pip
+  - pip install awscli
+  - npm install -g serverless@1.79.0
+deploy:
+  provider: script
+  script: yarn deploy:staging
