--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,8 @@ before_deploy:
   - npm install -g serverless@1.79.0
 deploy:
   provider: script
-  script: yarn deploy:staging
+  script:
+    - yarn --frozen-lockfile
+    - yarn deploy:staging
   on:
     branch: develop
