ci: :construction_worker: enable prod build

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,7 +14,11 @@ before_deploy:
   - pip install awscli
   - npm install -g serverless@1.79.0
 deploy:
-  provider: script
-  script: yarn --frozen-lockfile && yarn deploy:staging
-  on:
-    branch: develop
+  - provider: script
+    script: yarn --frozen-lockfile && yarn deploy:staging
+    on:
+      branch: develop
+  - provider: script
+    script: yarn --frozen-lockfile && yarn deploy:prod
+    on:
+      branch: master
