ci: :construction_worker: set deploy trigger on tags

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,9 @@ deploy:
     script: yarn --frozen-lockfile && yarn deploy:staging
     on:
       branch: develop
+      tags: true
   - provider: script
     script: yarn --frozen-lockfile && yarn deploy:prod
     on:
       branch: master
+      tags: true
