--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ node_js:
 cache:
   directories:
   - node_modules
+branches:
+  only:
+    - master
+    - develop
 script:
   - yarn --frozen-lockfile
   - yarn lint
