--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev --hostname 127.0.0.1 --port 2662",
     "lint": "eslint --fix .",
     "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" --config ./.prettierrc",
-    "deploy:prod": "npm run build:clean && npm run build:download:prod && env-cmd -f .env.production serverless && npm run build:upload:prod",
+    "deploy:prod": "npm run build:clean && npm run build:download:prod && env-cmd -f .env.production serverless 1>>.serverless/deploy.log 2>&1 && npm run build:upload:prod",
     "build:upload:prod": "aws s3 sync .serverless s3://j3ko-serverless-state/commit-composer/prod/.serverless --delete",
     "build:download:prod": "aws s3 sync s3://j3ko-serverless-state/commit-composer/prod/.serverless .serverless --delete",
-    "deploy:staging": "npm run build:clean && npm run build:download:staging && env-cmd -f .env.production serverless && npm run build:upload:staging",
+    "deploy:staging": "npm run build:clean && npm run build:download:staging && env-cmd -f .env.production serverless 1>>.serverless/deploy.log 2>&1 && npm run build:upload:staging",
     "build:upload:staging": "aws s3 sync .serverless s3://j3ko-serverless-state/commit-composer/staging/.serverless --delete",
     "build:download:staging": "aws s3 sync s3://j3ko-serverless-state/commit-composer/staging/.serverless .serverless --delete",
     "release": "standard-version --commit-all",
