feat: :sparkles: implement changelog link
The changelog link displays the packaged `CHANGELOG.md` file.  Header title text was also converted
to a link to allow the user to navigate back to the main page.

--- a/.versionrc
+++ b/.versionrc
@@ -1,3 +1,6 @@
 {
-  "header": "# Changelog\n"
+  "header": "# Changelog\n\n",
+  "scripts": {
+    "postchangelog": "npx copyfiles ./CHANGELOG.md ./public/ && git add ./public/CHANGELOG.md"
+  }
 }
