--- a/package.json
+++ b/package.json
@@ -40,9 +40,12 @@
     "react-dom": "16.13.1",
     "react-icons": "^3.11.0",
     "react-jss": "^10.4.0",
+    "react-markdown": "^5.0.2",
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
+    "remark-emoji": "^2.1.0",
+    "remark-gfm": "^1.0.0",
     "rxjs": "^6.6.3"
   },
   "devDependencies": {
@@ -55,6 +58,7 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "chmodr": "^1.2.0",
+    "copyfiles": "^2.4.0",
     "cross-env": "^7.0.2",
     "env-cmd": "^10.1.0",
     "eslint": "^7.9.0",
