--- a/package.json
+++ b/package.json
@@ -44,6 +44,8 @@
     "react-redux": "^7.2.1",
     "redux": "^4.0.5",
     "redux-observable": "^1.2.0",
+    "redux-persist": "^6.0.0",
+    "redux-persist-transform-filter": "^0.0.20",
     "remark-emoji": "^2.1.0",
     "remark-gfm": "^1.0.0",
     "rxjs": "^6.6.3"
