--- a/.prettierrc
+++ b/.prettierrc
@@ -5,5 +5,6 @@
   "singleQuote": true,
   "trailingComma": "all",
   "jsxBracketSameLine": true,
-  "useTabs": false
+  "useTabs": false,
+  "endOfLine": "lf"
 }
