--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ script:
   - yarn --frozen-lockfile --silent
   - yarn lint
   - yarn build
+  - yarn test
 before_deploy:
   - pyenv global 3.7.1
   - pip install -U pip
