--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev --hostname 127.0.0.1 --port 2662",
     "lint": "eslint --fix .",
     "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" --config ./.prettierrc",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "deploy:prod": "npm run build:clean && npm run build:download:prod && env-cmd -f .env.production serverless 1>>.serverless/deploy.log 2>&1 && npm run build:upload:prod",
     "build:upload:prod": "aws s3 sync .serverless s3://j3ko-serverless-state/commit-composer/prod/.serverless --delete",
     "build:download:prod": "aws s3 sync s3://j3ko-serverless-state/commit-composer/prod/.serverless .serverless --delete",
@@ -54,6 +57,9 @@
     "@commitlint/cli": "^11.0.0",
     "@sls-next/serverless-component": "1.17.0",
     "@types/classnames": "^2.2.10",
+    "@types/enzyme": "^3.10.8",
+    "@types/enzyme-adapter-react-16": "^1.0.6",
+    "@types/jest": "^26.0.15",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
@@ -63,6 +69,9 @@
     "copyfiles": "^2.4.0",
     "cross-env": "^7.0.2",
     "env-cmd": "^10.1.0",
+    "enzyme": "^3.11.0",
+    "enzyme-adapter-react-16": "^1.15.5",
+    "enzyme-to-json": "^3.6.1",
     "eslint": "^7.9.0",
     "eslint-config-prettier": "^6.11.0",
     "eslint-plugin-jsx-a11y": "^6.3.1",
@@ -73,6 +82,7 @@
     "file-replace-loader": "^1.3.1",
     "git-branch-is": "^4.0.0",
     "husky": "^4.3.0",
+    "jest": "^26.6.3",
     "less-vars-to-js": "^1.3.0",
     "lint-staged": "^10.4.0",
     "null-loader": "^4.0.0",
@@ -82,6 +92,7 @@
     "redux-typed-actions": "^0.1.5",
     "rimraf": "^3.0.2",
     "standard-version": "^9.0.0",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.0.3",
     "webpack-filter-warnings-plugin": "^1.2.1"
   },
