--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
     "cosmiconfig": "^7.0.0",
+    "json5": "^2.1.3",
     "less": "^3.12.2",
     "next": "9.5.4",
     "next-compose-plugins": "^2.2.0",
@@ -60,6 +61,7 @@
     "@types/enzyme": "^3.10.8",
     "@types/enzyme-adapter-react-16": "^1.0.6",
     "@types/jest": "^26.0.15",
+    "@types/json5": "^0.0.30",
     "@types/node": "^14.11.2",
     "@types/react": "^16.9.49",
     "@types/react-dom": "^16.9.8",
