--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "antd": "^4.6.5",
     "babel-plugin-import": "^1.13.0",
     "classnames": "^2.2.6",
+    "conventional-commit-types": "^3.0.0",
     "cosmiconfig": "^7.0.0",
     "json5": "^2.1.3",
     "less": "^3.12.2",
