--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "build": "next build",
     "start": "next start",
     "debug": "cross-env NODE_OPTIONS='--inspect' next dev --hostname 127.0.0.1 --port 2662",
-    "lint": "eslint --fix .",
-    "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" --config ./.prettierrc",
+    "lint": "eslint . && prettier --check \"./**/*.{css,md,json}\" --config ./.prettierrc --loglevel warn",
+    "format": "eslint --fix . && prettier --write \"./**/*.{css,md,json}\" --config ./.prettierrc --loglevel warn",
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
@@ -83,7 +83,6 @@
     "eslint-plugin-react-hooks": "^4.1.2",
     "eslint-plugin-simple-import-sort": "^5.0.3",
     "file-replace-loader": "^1.3.1",
-    "git-branch-is": "^4.0.0",
     "husky": "^4.3.0",
     "jest": "^26.6.3",
     "less-vars-to-js": "^1.3.0",
@@ -101,13 +100,16 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "if git-branch-is -q -v master || git-branch-is -q -v develop; then lint-staged; fi",
-      "commit-msg": "if git-branch-is -q -v master || git-branch-is -q -v develop; then commitlint -E HUSKY_GIT_PARAMS; fi"
+      "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
-    "./**/*.{js,jsx,ts,tsx,json}": [
+    "./**/*.{js,jsx,ts,tsx}": [
       "eslint --fix"
+    ],
+    "./**/*.{css,md,json}": [
+      "prettier --write --config ./.prettierrc --loglevel warn"
     ]
   }
 }
