--- a/package.json
+++ b/package.json
@@ -12,16 +12,17 @@
     "test": "jest",
     "test:watch": "jest --watch",
     "test:coverage": "jest --coverage",
-    "deploy:prod": "npm run build:clean && npm run build:download:prod && env-cmd -f .env.production serverless 1>>.serverless/deploy.log 2>&1 && npm run build:upload:prod",
+    "sls": "shx cp -R ./.serverless/serverless.yml ./serverless.yml && env-cmd -f .env.production serverless 1>>.serverless/deploy.log 2>&1",
+    "deploy:prod": "npm run build:clean && npm run build:download:prod && npm run sls && npm run build:upload:prod",
     "build:upload:prod": "aws s3 sync .serverless s3://j3ko-serverless-state/commit-composer/prod/.serverless --delete",
     "build:download:prod": "aws s3 sync s3://j3ko-serverless-state/commit-composer/prod/.serverless .serverless --delete",
-    "deploy:staging": "npm run build:clean && npm run build:download:staging && env-cmd -f .env.production serverless 1>>.serverless/deploy.log 2>&1 && npm run build:upload:staging",
+    "deploy:staging": "npm run build:clean && npm run build:download:staging && npm run sls && npm run build:upload:staging",
     "build:upload:staging": "aws s3 sync .serverless s3://j3ko-serverless-state/commit-composer/staging/.serverless --delete",
     "build:download:staging": "aws s3 sync s3://j3ko-serverless-state/commit-composer/staging/.serverless .serverless --delete",
     "release": "standard-version --commit-all",
     "postinstall": "patch-package --use-yarn",
-    "build:clean": "rimraf .next && rimraf .serverless_nextjs && rimraf .serverless",
-    "build:reset": "npm run build:clean && rimraf node_modules"
+    "build:clean": "shx rm -rf .next && shx rm -rf .serverless_nextjs && shx rm -rf .serverless && shx rm -rf ./serverless.yml",
+    "build:reset": "npm run build:clean && shx rm -rf node_modules"
   },
   "dependencies": {
     "@commitlint/config-angular": "^11.0.0",
@@ -69,7 +70,6 @@
     "@typescript-eslint/eslint-plugin": "^4.2.0",
     "@typescript-eslint/parser": "^4.2.0",
     "chmodr": "^1.2.0",
-    "copyfiles": "^2.4.0",
     "cross-env": "^7.0.2",
     "env-cmd": "^10.1.0",
     "enzyme": "^3.11.0",
@@ -92,7 +92,7 @@
     "postinstall-postinstall": "^2.1.0",
     "prettier": "^2.1.2",
     "redux-typed-actions": "^0.1.5",
-    "rimraf": "^3.0.2",
+    "shx": "^0.3.3",
     "standard-version": "^9.0.0",
     "ts-jest": "^26.4.4",
     "typescript": "^4.0.3",
