--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "classnames": "^2.2.6",
     "conventional-commit-types": "^3.0.0",
     "cosmiconfig": "^7.0.0",
+    "immer": "^8.0.0",
     "json5": "^2.1.3",
     "less": "^3.12.2",
     "next": "9.5.4",
